# TrabajoFinal

./: .env  ci.db  placeholder.db
.github/workflows/: ci.yml
.pytest_cache/v/cache/: lastfailed  nodeids
backend/: alembic.ini  ci.db  placeholder.db  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 20251201_0001_init_tables.py
backend/app/: __init__.py  core.py  main.py
backend/app/api/: categories.py  products.py
backend/app/models/: category.py  product.py
backend/app/schemas/: category.py  product.py
backend/app/services/: category_service.py  product_service.py
backend/tests/: test_api_integration.py  test_services.py
e2e/: test_e2e_playwright.py
frontend/: index.html
